made changes to metadata