@@ -1,139 +1,118 @@
 package gdk.api;
 
 import gdk.infrastructure.GameMode;
+import gdk.infrastructure.DifficultyLevel;
 
-import java.util.Map;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
- * Metadata class for game modules.
- * Contains all the metadata information that every game module must provide.
- * This class is designed to be extended by each game module to provide
- * their specific metadata information.
+ * Abstract base class for game metadata.
+ * Each game module extends this class to describe its unique configuration,
+ * including supported modes, player counts, and difficulty levels.
+ *
+ * This simplified version omits getRequirements(), keeping only
+ * essential metadata accessors for local or in-app use.
  *
  * @authors Clement Luo
  * @date July 25, 2025
- * @edited November 8, 2025
+ * @edited November 9, 2025
  * @since Beta 1.0
  */
 public abstract class GameMetadata {
-    
-    // ==================== ABSTRACT METHODS ====================
-    
-    /**
-     * Get the display name of the game.
-     * This is the name that will be shown in the UI.
-     * 
-     * @return The display name of the game
-     */
-    public abstract String getGameName();
-    
-    /**
-     * Get the version of the game.
-     * 
-     * @return The game version
-     */
-    public abstract String getGameVersion();
-    
-    /**
-     * Get the description of the game.
-     * 
-     * @return The game description
-     */
-    public abstract String getGameDescription();
-    
-    /**
-     * Get the author of the game.
-     * 
-     * @return The game author
-     */
-    public abstract String getGameAuthor();
-    
-    // ==================== REQUIREMENTS ====================
-    
-    /**
-     * Get the minimum number of players required.
-     * 
-     * @return The minimum number of players
-     */
-    public abstract int getMinPlayers();
-    
-    /**
-     * Get the maximum number of players supported.
-     * 
-     * @return The maximum number of players
-     */
-    public abstract int getMaxPlayers();
-    
-    /**
-     * Get the minimum difficulty level.
-     * 
-     * @return The minimum difficulty level
-     */
-    public abstract String getMinDifficulty();
-    
-    /**
-     * Get the maximum difficulty level.
-     * 
-     * @return The maximum difficulty level
-     */
-    public abstract String getMaxDifficulty();
-    
-    /**
-     * Get the estimated duration of a game in minutes.
-     * 
-     * @return The estimated duration in minutes
-     */
-    public abstract int getEstimatedDurationMinutes();
-    
-    // ==================== UTILITY METHODS ====================
 
-    /**
-     * Get the set of supported game modes for this game.
-     *
-     * @return A set of supported GameMode values
-     */
+    // ==================== ABSTRACT METHODS ====================
+
+    /** @return The display name of the game */
+    public abstract String getGameName();
+
+    /** @return The game version */
+    public abstract String getGameVersion();
+
+    /** @return A short description of the game */
+    public abstract String getGameDescription();
+
+    /** @return The author or developer of the game */
+    public abstract String getGameAuthor();
+
+    /** @return The minimum number of players supported */
+    public abstract int getMinPlayers();
+
+    /** @return The maximum number of players supported */
+    public abstract int getMaxPlayers();
+
+    /** @return The estimated average duration of a session, in minutes */
+    public abstract int getEstimatedDurationMinutes();
+
+    /** @return The set of game modes supported (e.g. SINGLEPLAYER, MULTIPLAYER) */
     public abstract Set<GameMode> getSupportedGameModes();
 
+    /** @return The set of supported difficulty levels (may be empty if not applicable) */
+    public abstract Set<DifficultyLevel> getSupportedDifficultyLevels();
+
+    // ==================== CONVENIENCE METHODS ====================
 
     /**
-     * Get the game requirements as a Map.
-     * 
-     * @return Map containing game requirements
+     * Automatically computes the lowest difficulty level from the supported set.
+     * Ignores unranked levels like ADAPTIVE.
+     *
+     * @return The lowest ranked difficulty, or null if none exist
      */
-    public Map<String, Object> getRequirements() {
-        Map<String, Object> requirements = new HashMap<>();
-        requirements.put("min_players", getMinPlayers());
-        requirements.put("max_players", getMaxPlayers());
-        requirements.put("min_difficulty", getMinDifficulty());
-        requirements.put("max_difficulty", getMaxDifficulty());
-        requirements.put("estimated_duration_minutes", getEstimatedDurationMinutes());
-        return requirements;
+    public DifficultyLevel getMinDifficulty() {
+        return getSupportedDifficultyLevels().stream()
+                .filter(DifficultyLevel::isRanked)
+                .min(Comparator.comparingInt(DifficultyLevel::getRank))
+                .orElse(null);
     }
-    
+
     /**
-     * Get the complete metadata as a Map for JSON responses.
-     * 
-     * @return Map containing all metadata
+     * Automatically computes the highest difficulty level from the supported set.
+     * Ignores unranked levels like ADAPTIVE.
+     *
+     * @return The highest ranked difficulty, or null if none exist
+     */
+    public DifficultyLevel getMaxDifficulty() {
+        return getSupportedDifficultyLevels().stream()
+                .filter(DifficultyLevel::isRanked)
+                .max(Comparator.comparingInt(DifficultyLevel::getRank))
+                .orElse(null);
+    }
+
+    // ==================== SERIALIZATION HELPERS ====================
+
+    /**
+     * Converts this metadata into a map structure for display or debugging.
+     * Ideal for internal tools or UI elements.
+     *
+     * @return A map representation of the game's metadata
      */
     public Map<String, Object> toMap() {
         Map<String, Object> metadata = new HashMap<>();
 
-        // Basic info
         metadata.put("name", getGameName());
         metadata.put("version", getGameVersion());
         metadata.put("description", getGameDescription());
         metadata.put("author", getGameAuthor());
 
-        // Game modes and requirements
+        metadata.put("min_players", getMinPlayers());
+        metadata.put("max_players", getMaxPlayers());
+        metadata.put("estimated_duration_minutes", getEstimatedDurationMinutes());
+
         metadata.put("supported_game_modes", getSupportedGameModes()
                 .stream()
                 .map(Enum::name)
-                .toList());
-        metadata.put("requirements", getRequirements());
+                .collect(Collectors.toList()));
+
+        metadata.put("supported_difficulty_levels", getSupportedDifficultyLevels()
+                .stream()
+                .map(DifficultyLevel::getLabel)
+                .collect(Collectors.toList()));
+
+        DifficultyLevel min = getMinDifficulty();
+        DifficultyLevel max = getMaxDifficulty();
+        metadata.put("min_difficulty", min != null ? min.getLabel() : null);
+        metadata.put("max_difficulty", max != null ? max.getLabel() : null);
 
         return metadata;
     }
-} 
+}
